Changelog
=========

2.5-dev0 - (unreleased)
---------------------------

2.4 - (2020-12-04)
---------------------------
* merge all nfp/nrc related functionality from the python2 branch
  [valipod refs #109366]
* remove all python2/zope2 specific functionality/support
  [valipod refs #109366]
* add organisation id in the table listing to allow filtering
  [dumitval refs #125322]
* Add organisation title to the XLS exported fields in role member
  export [dumitval refs #125322]
* remove possibility to autodisable users [dumitval]

2.3 - (2020-05-13)
---------------------------
* Change: Tests and Linters
  [valipod]

2.2 - (2020-03-03)
---------------------------
* Change: Add jenkins badges
  [valentinab25]

2.1 - (2020-02-26)
---------------------------
* Feature: updated Jenkins pipeline
  [alecghica refs #110159]

2.0 - (2020-02-13)
---------------------------
* Change: Gitflow automatic release
  [valentinab25 refs #110159]
* compatibility changes for gitflow integration
  [dumitval]
* fix fetching of error messages
  [dumitval]
* remove duplicated user edit page in the organisation area
  [dumitval]
* fix permission checking (issue with bytes vs. str)
  [dumitval]
* fixes for the new branch of 'observing countries'
  [dumitval]
* remove reference to accordion
  [dumitval]
* remove links to old jquery libraries
  [dumitval]
* replace zope.Public permission with zope2.View
  [dumitval]
* various fixes in the extended management
  [dumitval]
* fix underscore link
  [dumitval]
* replace selectize by select2 (already in plonesaas)
  [dumitval]
* fix for the edit role name
  [dumitval]
* fix for getting the authenticated user id
  [dumitval]
* fix sending various emails when creating/editing users
  [dumitval]
* handle None value in phone field (bulk create users)
  [dumitval]
* Bug fix: show enable button for disabled users
  [dumitval]
* add role listing in the roles_reset page
  [dumitval]
* remove mail server dialogue from email validation
  [dumitval]