@@ -1086,15 +1086,6 @@ class OrganisationsEditor(SimpleItem, PropertyManager):
                 else:
                     raise
 
-    def get_ldap_user_groups(self, user_id):
-        """ return the ldap roles of user """
-        agent = self._get_ldap_agent(bind=True, secondary=True)
-        ldap_roles = sorted(agent.member_roles_info('user',
-                                                    user_id,
-                                                    ('description',)))
-
-        return ldap_roles
-
 
 InitializeClass(OrganisationsEditor)
 
